Initial working version

--- a/index.html
+++ b/index.html
@@ -1,8 +1,131 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <link type="text/css" rel="stylesheet" href="styles.css" />
    </head>
    <body>
       <!-- Write your HTML in this file! -->
+      <header id="mainHeading">
+         <p id="name">Soniya Vakkat Kuttan</p>
+         <a href="mailto:vksoniya68@gmail.com" target="_blank"><p id="email">vksoniya68@gmail.com</p></a>
+      </header>
+      <main class="right">
+         <article>
+            <h3>Experience Summary</h3>
+            <p>
+            <ul>
+               <li>Currently going through LaunchCode - Women's+ STL - Web development using C# and Javascript</li>
+               <li>Learnt basic JavaScript, HTML, CSS on LaunchCode.com.</li>
+               <li>An independent, dedicated, efficient person. These attributes are proved through the series of courses I have taken or I am taking as of now independently through online platforms.</li>
+               <li>Good Communication Skills, Presentation Skills, attitude towards leadership, authorisation and delegation, conflict resolution and negotiation and a very good team worker.</li>
+            </ul>
+            </p>
+         </article>
+         <article>
+            <h3>Professional Experience</h3>
+            <h4 id="company-name">Co-operative Society Bank</h4>
+            <p id="job-title"><strong>Data Entry operator</strong></p>
+            <p id="job-responsibilities">Job Responsbilities</p>
+            <p>
+               <ul>
+                  <li>Migrating all manual work in the bank to internal banking application</li>
+                  <li>Helping my colleagues to educate basic computer operations</li>
+                  <li>Transfering all the ledger work to internal banking application</li>
+                  <li>Calculations of pending loan applications and feeding them to internal banking application</li>
+               </ul>
+            </p>
+         
+            <h4 id="company-name">Bilkish Associates</h4>
+            <p id="job-title"><strong>Recovery Area Manager</strong></p>
+            <p id="job-responsibilities">Job Responsbilities</p>
+            <p>
+               <ul>
+                  <li>Handling offshore recovery process for UAE based banks from India</li>
+                  <li>Checking on the status the of loan and whereabouts of the individual owning overseas accounts</li>
+                  <li>Updating the status after conversation with the individual</li>
+                  <li>Following up with the individuals to make the payment on time and report the status on a regular basis</li>
+               </ul>
+            </p>  
+         </article> 
+         <article>
+            <h3>Educational Qualifications</h3>
+            <table>
+               <tr id="heading">
+                  <td>Qualification</td>
+                  <td>Board</td>
+                  <td>Percentage / Grades</td>
+                  <td>Year</td>
+               </tr>
+               <tr>
+                  <td>S.S.L.C</td>
+                  <td>S.C.G.H.S.S, Trichur, India</td>
+                  <td>63.17%</td>
+                  <td>2002</td>
+               </tr>
+               <tr>
+                  <td>H.S.C (Commerce Stream)</td>
+                  <td>G.F.H.S.S, Trichur, India</td>
+                  <td>62%</td>
+                  <td>2004</td>
+               </tr>
+               <tr>
+                  <td>B.Com</td>
+                  <td>Victoria Womens College, Trichur, India</td>
+                  <td>C Grade</td>
+                  <td>2007</td>
+               </tr>
+            </table>
+         </article>
+         <article>   
+            <h3>Independent Courses</h3>
+            <p>
+            <ul>
+               <li>
+               <span id="course-name">Diploma in Computerized Financial Accountin</li>
+            </ul>
+         </article>
+         <article>
+            <h3>Technical Skills</h3>
+            <p>
+            <ul>
+               <li>
+               <span id="course-name">Operating Systems:</span> Windows XP, Windows NT, Windows 7, Windows 10</li>
+               <li>
+               <span id="course-name">Application Software:</span> Office XP, Office 2007,Excel 2003/2007 for Financial Modelling spreadsheets.</li>
+               <li>
+               <span id="course-name">Programming Skills:</span>HTML, CSS, JavaScript, learning C#</li></ul>
+            </p>
+         </article>
+         <article>
+            <h3>Personal Information:</h3>
+            <p id="testP">
+            <ul>
+               <li>
+               A young, determined hard and smart working person. I believe in task based roles and complete ownership of work.
+               <li>
+               <span id="course-name">Languages Known:</span>English, Malayalam, and Tamil</li>
+               <li>
+               <span id="course-name">Hobbies:</span>I love gardening and reading magazines, listening music, surfing Internet</li> </ul>
+            </p>
+         </article>
+         <article>
+            <h3>Other Information</h3>
+            <p>
+            <ul>
+               <li>
+               <span id="course-name">Expected Salary:</span>As per company standards</li>
+               <li>
+               <span id="course-name">Area of Interest:</span>Software Development, Programming, Start-ups, Coding, App Development, Technical Support, Support Engineer, Customer Happiness, Client service, Investment Banking, Corporate Finance, Hedge Funds, Mergers & Acquisitions, Analyst, Equity Research, Business Analysis</li>
+               <li>
+               <span id="course-name">Joining Date:</span>Immediate</li></ul>
+            </p>
+         </article>
+         <article>
+            <h3>Declaration</h3>
+            <p>
+            I hereby declare that the details furnished above are true and correct to the best of my knowledge and belief.</p>
+         </article>
+      </main>
+      <footer id="footer"></footer>
    </body>
 </html>
