Changes related to review comments

--- a/index.html
+++ b/index.html
@@ -98,14 +98,15 @@
          </article>
          <article>
             <h3>Personal Information:</h3>
-            <p id="testP">
-            <ul>
-               <li>
-               A young, determined hard and smart working person. I believe in task based roles and complete ownership of work.
-               <li>
-               <span id="course-name">Languages Known:</span>English, Malayalam, and Tamil</li>
-               <li>
-               <span id="course-name">Hobbies:</span>I love gardening and reading magazines, listening music, surfing Internet</li> </ul>
+            <p>
+               <ul id="testP">
+                  <li>
+                  A young, determined hard and smart working person. I believe in task based roles and complete ownership of work.
+                  <li>
+                  <span id="course-name">Languages Known:</span>English, Malayalam, and Tamil</li>
+                  <li>
+                  <span id="course-name">Hobbies:</span>I love gardening and reading magazines, listening music, surfing Internet</li> 
+            </ul>
             </p>
          </article>
          <article>
