Review comments from KJ

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <p>
             <ul>
                <li>
-               <span id="course-name">Diploma in Computerized Financial Accountin</li>
+               <span id="course-name">Diploma in Computerized Financial Accounting</li>
             </ul>
          </article>
          <article>
@@ -98,15 +98,12 @@
          </article>
          <article>
             <h3>Personal Information:</h3>
-            <p>
-               <ul id="testP">
-                  <li>
+            <p class="funParagraph">
                   A young, determined hard and smart working person. I believe in task based roles and complete ownership of work.
-                  <li>
-                  <span id="course-name">Languages Known:</span>English, Malayalam, and Tamil</li>
-                  <li>
-                  <span id="course-name">Hobbies:</span>I love gardening and reading magazines, listening music, surfing Internet</li> 
-            </ul>
+                  <br />
+                  <strong>Languages Known:</strong>English, Malayalam, and Tamil
+                  <br />
+                  <strong>Hobbies:</strong>I love gardening and reading magazines, listening music, surfing Internet
             </p>
          </article>
          <article>
